--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Molde FK Nyheter</title>
-    <link rel="stylesheet" href="stilark.css"> <!-- Legg til en CSS-fil for å style nettsiden -->
+    <link rel="stylesheet" href="stilark.css">
 
 </head>
 <body>
@@ -37,7 +37,7 @@
     Han har allerede bevist at han har det som kreves for å nå toppen, og hans fremtid i fotballverdenen ser lys ut.
     Træff-fansen håper selvfølgelig at han velger å bli hos klubben, mens Molde og andre klubber ser ut til å være
     ivrige etter å sikre seg hans tjenester. Det blir spennende å se hvordan denne historien utvikler seg.</p>
-    <img id="maggy" alt="Maggy bilde" src="img/MicrosoftTeams-image.png" class="center" width="40%"/>
+    <img id="maggy" alt="Maggy bilde" src="img/MicrosoftTeams-image.png"/>
 </article>
 
 <footer>
