--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     Han har allerede bevist at han har det som kreves for å nå toppen, og hans fremtid i fotballverdenen ser lys ut.
     Træff-fansen håper selvfølgelig at han velger å bli hos klubben, mens Molde og andre klubber ser ut til å være
     ivrige etter å sikre seg hans tjenester. Det blir spennende å se hvordan denne historien utvikler seg.</p>
-    <img id="maggy" alt="Maggy bilde" src="img/MicrosoftTeams-image.png"/>
+    <img id="maggy" alt="Maggy bilde" src="MicrosoftTeams-image.png"/>
 </article>
 
 <footer>
